# bbqr-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: join.cpp  split.cpp
include/bbqr/: bbqr.hpp  utils.hpp
src/: bbqr.cpp  strencoding.hpp  utils.cpp
tests/: .clangd  CMakeLists.txt  test_decoding.cpp  test_encoding.cpp  test_loopback.cpp  test_utils.hpp
